# real_time_chat_application_with_fastapi_and_mysql

./: .gitignore  DOCKER_SETUP.md  LICENSE  README.md  WEBSOCKET_TESTING.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  docker-requirements.txt  pyproject.toml  websocket_test.html
backend/app/: main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6851b9dfb87b_create_initial_models.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py  chat.py  websocket.py
backend/app/core/: config.py  db.py  security.py
backend/app/schemas/: auth.py  chat.py
backend/scripts/: fix_migration_linters.py  run_migrations.ps1  run_migrations.sh
postman_collections/: REAL TIME CHAT_REST.postman_collection
